--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,7 @@
   }
 
   .tail-text-input {
-    @apply bg-black/[.05] dark:bg-white/[.05] p-2  px-3 rounded-full outline-0;
+    @apply bg-foreground/[.05] p-2  px-3 rounded-full outline-0;
   }
 }
 
@@ -54,4 +54,15 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: var(--foreground);
+  transition: background-color 5000s ease-in-out 0s;
+  box-shadow: inset 0 0 20px 20px var(--background);
+  @apply border-1 border-sky-600;
 }
