--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,7 +11,7 @@
   }
 
   .tail-button {
-    @apply from-neon to-neon-sub bg-gradient-to-br;
+    @apply from-neon to-neon-sub bg-gradient-to-br hover:to-neon-mid hover:contrast-[150%];
   }
 
   .tail-button-violet {
@@ -181,6 +181,45 @@
     -webkit-mask-image: linear-gradient(to bottom, transparent 2%, black 30%, black 70%, transparent 98%);
     mask-image: linear-gradient(to bottom, transparent 2%, black 30%, black 70%, transparent 98%);
   }
+
+  .turn-off-animate,
+  .turn-on-animate {
+    @apply relative object-cover overflow-hidden;
+  }
+
+  .turn-off-animate::before,
+  .turn-on-animate::before {
+    content: "";
+    @apply top-0 left-1/2  h-2 rotate-z-45 bg-white absolute;
+    margin-top: calc(50% - 0.5rem);
+    width: calc(100% + 0.5rem);
+    margin-left: calc(-50% - 0.5rem);
+    clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
+    animation: 0.6s turn-off-animate-line forwards ease-in-out;
+    animation-delay: 0.4s;
+  }
+
+  .turn-off-animate::after,
+  .turn-on-animate::after {
+    content: "";
+    @apply top-0 left-0 w-full h-full absolute;
+    animation: 1s turn-off-animate forwards ease-in-out;
+  }
+
+  .turn-on-animate::before {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    animation: 0.6s turn-off-animate-line forwards ease-in-out reverse;
+    animation-delay: 0.4s;
+  }
+
+  .turn-on-animate::after {
+    animation: 1s turn-off-animate forwards ease-in-out reverse;
+  }
+
+  .animate-refresh {
+    animation: 1.3s animate-refresh forwards ease-in-out;
+    animation-delay: 600ms;
+  }
 }
 
 :root {
@@ -330,5 +369,43 @@ input:-webkit-autofill:active {
 
   to {
     opacity: 1;
+  }
+}
+
+@keyframes turn-off-animate {
+  0% {
+    backdrop-filter: grayscale(0);
+  }
+
+  100% {
+    backdrop-filter: grayscale(1);
+  }
+}
+
+@keyframes turn-off-animate-line {
+  0% {
+    clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
+  }
+
+  100% {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  }
+}
+
+@keyframes animate-refresh {
+  0%, 10% {
+    transform: rotateZ(0deg);
+    filter: grayscale(0);
+  }
+
+  30%,
+  70% {
+    transform: rotateZ(inherit);
+    filter: grayscale(1);
+  }
+
+  90%, 100% {
+    transform: rotateZ(360deg);
+    filter: grayscale(0);
   }
 }
